--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <div class="section-2-container">
                     <div class="section-2-info">
-                        <div class="varticle-line"></div>
+                        <div id="varticle-line"></div>
                         <h2 class="section-2-title-1">Features you will love & enjoy</h2>
                         <p class="setion-2-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     </div>
