--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
     </header>
 
-    <!---------------- this is main---------------->
+    <!---------------- this is main------------------->
     <main>
+        <!----------------section-one----------------->
         <section class="section-1">
             <div class="section-1-img">
                 <img src="images/team1.png" alt="">
@@ -61,7 +62,7 @@
             
         </section>
 
-        <!------------------section two--------------->
+        <!------------------section-two--------------->
         <section>
             <div class="section-2">
 
@@ -106,7 +107,7 @@
                 <p class="section-3-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
         </section>
-        <!------------------section-four----------------->
+        <!------------------section-four-------------->
         <section>
             <div class="section-four">
                 <div class="section-four-info">
@@ -132,14 +133,14 @@
             </div>
         </section>
         
-        <!------------------section-five--------------->
+        <!------------------section-five-------------->
         <section>
             <div class="section-5">
                 <h1 class="section-5-title">Our Sponspors</h1>
                 <p class="section-5-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
         </section>
-        <!----------------section-six------------------->
+        <!----------------section-six----------------->
         <section>
            <div class="section-six">
             <div><img src="images/sponsors/spotify.png" alt=""></div>
@@ -149,7 +150,7 @@
             <div><img src="images/sponsors/figma.png" alt=""></div>
            </div>
         </section>
-        <!----------------section-seven-------------->
+        <!----------------section-seven--------------->
         <section>
             <div class="section-seven">
                 <div class="section-seven-info">
@@ -162,6 +163,7 @@
             </div>
         </section>
     </main>
+    <!----------------this is footer------------------>
     <footer>
         <div class="footer-section">
             <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p> 
